--- a/RDIP/Codes/exp2.css
+++ b/RDIP/Codes/exp2.css
@@ -1,11 +1,34 @@
-.corpusbox {
+.tt{
+    color: blue;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.headd{
+    font-size: 30px;
+}
+.selectbox {
+    text-align: center;
+}
+.sell {
+    height: 30px;
+    width: 170px;
+    font-size: 15px;
     text-align: center;
 }
 
+#corpus-para {
+    text-align: center;
+    margin-left: 15vw;
+    margin-right: 15vw;
+}
 
+.content {
+    text-align: center;
+    font-size: x-large;
+}
 
-
-.hide {
+.hiden {
     display: none;
 }
 
@@ -13,6 +36,7 @@ table {
     text-align: center;
     margin: auto;
     width: 25%;
+    border-collapse: collapse;
 }
 
 td {
@@ -21,7 +45,11 @@ td {
     width: 50%;
 }
 
-
+#submit, #continue, #submit2 {
+    width: 10vw;
+    height: 5vh;
+    font-size: large;
+}
 
 .correct {
     background-color: green;
@@ -31,3 +59,11 @@ td {
     background-color: red;
 }
 
+#inp-tokens, #inp-types {
+    font-size: large;
+}
+
+#inp-roots {
+    font-size: large;
+    width: 10vw;
+}
